--- a/tennis/resources/css/style.css
+++ b/tennis/resources/css/style.css
@@ -2,14 +2,17 @@
     margin:0;
     padding:0;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
+
+
 #banner{
     background: linear-gradient(rgba(0,0,0,0.5), #009688), url(../images/banner.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
     width:100%;
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 #banner-text{
@@ -95,7 +98,7 @@
     right: -250px;
     background: #009688;
     transition: 0.5s;
-    z-index:2;
+    /* z-index:1; */
 }
 
 
@@ -131,6 +134,7 @@ nav ul li a:hover{
     position:fixed;
     bottom:10px;
     width: 90px;
+    z-index: 4;
 }
 
 #menubtn{
@@ -142,7 +146,6 @@ nav ul li a:hover{
     right: 30px;
     top: 20px;
     border-radius: 3px;
-    z-index: 3;
     cursor: pointer;    
 }
 
@@ -163,16 +166,17 @@ nav ul li a:hover{
     top:0;
     left: 0;
     opacity: 0.7;
-    z-index: -1;
+    z-index: 2;
+    display: none;
 }
 
 #closeoverlay{
-    width: 30px;
-    height: 30px;
-    position: fixed;
-    right:30%;
-    top: 40px;
+    width: 15px;
+    height: 15px;
+    margin: 10px 10px 0 0;
+    float: right;
     cursor: pointer;    
+    opacity: 0.8;
 }
 
 #loginbox{
@@ -186,13 +190,15 @@ nav ul li a:hover{
     left:35%;    
     border-radius: 10px;
     opacity: 1;
-    z-index: -1;
+    z-index: 3;
+    display: none;
     text-align:center;
 }
 #loginbox h1{
     text-align: center;
     color: #009688;
     margin: 25px 0;
+    display:inline-block;
 }
 
 #loginbox button{
@@ -206,6 +212,7 @@ nav ul li a:hover{
     box-shadow: none;
 }
 
+
 #loginbox button:hover{
     cursor: pointer;    
     background: #017c70;
@@ -216,8 +223,14 @@ nav ul li a:hover{
     color: black;
 }
 
+#loginbox input {
+    height: 25px;
+    border-radius: 5px;
+}
+
 #loginbox p{
     font-size:12px;
+    
 }
 
 #regbtn {
@@ -235,17 +248,19 @@ nav ul li a:hover{
     left:35%;    
     border-radius: 10px;
     opacity: 1;
-    z-index: -2;
+    z-index: 3;
+    display: none;
     text-align:center;
 }
 #regbox h1{
     text-align: center;
     color: #009688;
     margin: 25px 0;
+    display: inline-block;
 }
 
 #regbox button{
-    margin: 30px;
+    margin: 10px 0 20px 0;
     width: 200px;
     height:40px;
     border-radius: 10px;
@@ -266,7 +281,8 @@ nav ul li a:hover{
 }
 #regbox input{
     margin-bottom: 10px;
-    height:15px;
+    height:25px;
+    border-radius: 5px;
 }
 
 
@@ -291,6 +307,7 @@ nav ul li a:hover{
 
     #content {
         width: 80%;
+        min-width: 200px;
         /*height: 400px;*/
         margin: 40px auto 0px auto;
         border:0px solid white;
@@ -302,21 +319,36 @@ nav ul li a:hover{
     #content h1{
         padding: 15px 0 0 0;        
     }
-    #closeoverlay{
+    /* #closeoverlay{
         top: 10px;
         left: 10px;
+    } */
+        
+    #loginbox{
+        width:90vw;
+        min-width: 200px;
+        left: 5vw;
+        height: 50vh;
+        margin:0;
     }
 
-    #loginbox{
-        width: 60%;
-        left: 10%;
-        height: 50vh;
-    }
+    /* #loginbox input{
+        height: 25px;
+    } */
 
     #regbox{
-        width: 60%;
-        left: 10%;
-        height: 70vh;
+        width:90vw;
+        min-width: 200px;
+        left: 5vw;
+        height: auto;
+        margin:0;
+    }
+    #regbox button{
+        margin: 30px 0 30px 0;
+    }
+
+    #regbox input{
+        height:25px;
     }
 
     
