--- a/tennis/resources/css/style.css
+++ b/tennis/resources/css/style.css
@@ -15,7 +15,7 @@
     /* z-index: 1; */
 }
 
-#banner-text{
+#banner-text {
     text-align: left;
     color: white;
 }
@@ -24,13 +24,17 @@
     font-size: 120px;
 }
 
-#banner-text h1 a{
+#banner-text a{
     color: white;
     text-decoration: none;
     font-family: 'Lobster';
 }
 
-#content {
+#banner-text a:hover{
+    cursor: pointer;
+}
+
+.content {
     width: 35%;   
     min-width: 400px; 
     margin: 0 auto;
@@ -40,33 +44,73 @@
     color:white;
     padding: 10px 0 20px 0;
     box-shadow: 5px 5px #018073;
+    display: none;
+    
+    
 }
 
-#content h1{
+.content h1{
     text-align:center;
     margin: 20px 0px;
 }
 
-#content p{
+.content p{
     margin: 0px 20px;    
 }
 
-#content form {
+.content form {
     margin:20px 20px;
     text-align:center;
     padding-bottom: 50px;
 }
 
-#content form p{
+.content form p{
     margin-bottom: 20px;
 }
 
-#content input{
+.content input{
     width: 50%;
     padding: 5px 0;
     margin: 5px 0;
     border-radius: 5px;
     border: 0.5px solid white;    
+}
+
+.timeContainer{
+    /* text-align:center; */
+    display: flex;
+    justify-content:center;
+}
+
+.bookBtn {
+    background-color: white;
+    color: black;
+    max-width: 100px;
+    padding: 0px 5px;
+  }
+
+.bookBtn:hover{
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+
+#booking {
+    max-height: 80%;
+    overflow: scroll;
+
+}  
+
+#start {
+    display: block;
+}
+
+#booking {
+    display: none;
 }
 
 #textbox {
@@ -127,6 +171,7 @@ nav ul li a:hover{
     border: 0.5px solid white;    
     background-color:white;    
     padding-left: 10px;
+    cursor: pointer;
 }
 
 #loginbtn{
@@ -170,7 +215,7 @@ nav ul li a:hover{
     display: none;
 }
 
-#closeoverlay{
+.closeoverlay{
     width: 15px;
     height: 15px;
     margin: 10px 10px 0 0;
@@ -305,7 +350,7 @@ nav ul li a:hover{
         margin-top: 10px ;
     }
 
-    #content {
+    .content {
         width: 80%;
         min-width: 200px;
         /*height: 400px;*/
@@ -315,8 +360,9 @@ nav ul li a:hover{
         background-color: #009688;
         color:white;
     }
+    
 
-    #content h1{
+    .content h1{
         padding: 15px 0 0 0;        
     }
     /* #closeoverlay{
@@ -353,3 +399,5 @@ nav ul li a:hover{
 
     
   }
+
+  
