--- a/tennis/resources/css/style.css
+++ b/tennis/resources/css/style.css
@@ -12,7 +12,6 @@
     background-position: center;
     height: 100vh;
     width:100%;
-    /* z-index: 1; */
 }
 
 #banner-text {
@@ -42,7 +41,7 @@
     border-radius: 5px;
     background-color: #009688;
     color:white;
-    padding: 10px 0 20px 0;
+    padding: 10px 0 0 0;
     box-shadow: 5px 5px #018073;
     display: none;
     
@@ -76,8 +75,26 @@
     border: 0.5px solid white;    
 }
 
+#courtpictures, #facilitiesPictures{
+    width: 100%;
+    height: 350px;
+    border-radius: 10px;
+    margin: 15px 0;
+    cursor: pointer;
+}
+
+
+
+#contact {
+    text-align: center;
+    
+}
+#contact ul {
+    list-style: none;
+    padding-bottom: 15px;
+}
+
 .timeContainer{
-    /* text-align:center; */
     display: flex;
     justify-content:center;
 }
@@ -113,14 +130,14 @@
     display: none;
 }
 
-#textbox {
+/* #textbox {
     height: 80px;
     width: 50%;
     margin: 5px 0;
     border-radius: 5px;
     border: 0.5px solid white;
     resize: none;
-}
+} */
 
 #btn {
     height:30px;    
@@ -215,12 +232,17 @@ nav ul li a:hover{
 }
 
 .closeoverlay{
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     margin: 10px 10px 0 0;
+    padding: 2px;
     float: right;
     cursor: pointer;    
     opacity: 0.8;
+}
+
+.closeoverlay:hover{
+    background: darkgrey;
 }
 
 #loginbox{
@@ -329,7 +351,6 @@ nav ul li a:hover{
     border-radius: 5px;
 }
 
-
 #regbox p{
     font-size:12px;
 }
@@ -351,37 +372,9 @@ nav ul li a:hover{
     color: black;
 }
 #myBookings h1{
-    text-align: center;
     color: #009688;
     margin: 25px 0;
     display:inline-block;
-}
-
-#myBookings button{
-    margin: 20px;
-    width: 120px;
-    height:30px;
-    border-radius: 10px;
-    background: #009688;
-    color:white;
-    border-color: white;
-    box-shadow: none;
-}
-
-
-#myBookings button:hover{
-    cursor: pointer;    
-    background: #017c70;
-}
-
-#myBookings button:active{    
-    background: white;
-    color: black;
-}
-
-#myBookings input {
-    height: 25px;
-    border-radius: 5px;
 }
 
 #myBookings p{
@@ -405,9 +398,8 @@ nav ul li a:hover{
     }
 
     .content {
-        width: 80%;
+        width: 90%;
         min-width: 200px;
-        /*height: 400px;*/
         margin: 40px auto 0px auto;
         border:0px solid white;
         border-radius: 10px;
@@ -419,10 +411,11 @@ nav ul li a:hover{
     .content h1{
         padding: 15px 0 0 0;        
     }
-    /* #closeoverlay{
-        top: 10px;
-        left: 10px;
-    } */
+
+
+    #courtpictures{
+        max-height: 250px;
+    }
         
     #loginbox{
         width:90vw;
