--- a/tennis/resources/css/style.css
+++ b/tennis/resources/css/style.css
@@ -405,6 +405,8 @@ nav ul li a:hover{
         border-radius: 10px;
         background-color: #009688;
         color:white;
+        max-height: 80vh;
+        overflow: scroll;
     }
     
 
@@ -416,6 +418,11 @@ nav ul li a:hover{
     #courtpictures{
         max-height: 250px;
     }
+
+    #facilitiesPictures {
+        max-height: 250px;
+    }
+
         
     #loginbox{
         width:90vw;
